styles.css
* {
    font-family: 'Xanh Mono', monospace;
}

header {
    height: 50px;
    width: 100%;
    background-image: linear-gradient( rgb(255, 255, 255, .7), rgb(225, 225, 225));
    border-bottom: solid;
    border-bottom-color: rgb(210, 210, 210);
    border-bottom-width: 1px;
    position: sticky;
    top: 0px;
    display: flex;
    justify-content: space-around;
}

.nav {
    color:(rgb(235, 235, 235, .75));
}

#stadium-photo {
    background-image: url("https://images.unsplash.com/photo-1593558209560-2ac5abd19cf8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80");
    height: 400px;
    background-position: center;
    margin-bottom: 0px;
}

#title-section {
    background-image: url("https://images.unsplash.com/photo-1519972064555-542444e71b54?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80");
    height: 300px;
    background-position: center;
    margin-top: 0px;
}

.header-text {
    text-align: center;
}

#title-header {
    font-size: 50px;
    margin-top: 100px;
    font-family: 'Homemade Apple', cursive;
}

#title-subheader {
    font-size: 25px;
}

#functioning-section {
    
    display: flex;
    flex-wrap: wrap;
    height: 600px;
    background-image: url("https://images.unsplash.com/photo-1505417947090-b3f8836c0f17?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1100&q=80");
    background-position: center;
}

#query-box {
    position: relative;
    height: 400px;
    width: 600px;
    padding-left: 25px;
    margin-top: 100px;
    margin-left: 200px;
    background-image: linear-gradient( rgb(245, 245, 245, .7), rgb(255, 255, 255, .45));
    border-radius: 5%;
    background-position: center;
}

#random-button {
    position: absolute;
    bottom: 25px;
    left: 80px;
    border-width: 1px;
    border-color: darkgray;
    border-top: none;
    border-left: none;
    background-image: linear-gradient( rgb(255, 255, 255, .7), rgb(225, 225, 225 .9));

}

.button {
    margin: 1px;
}

.dropdown {
    position: absolute;
    top: 35px;
    left: 80px;
    border-width: 1px;
    border-color: darkgray;
    border-top: none;
    border-left: none;
    background-image: linear-gradient( rgb(255, 255, 255, .7), rgb(225, 225, 225 .9));

}

